# audioViz

./: .gitignore  CMakeLists.txt  README.md
include/: glad.c
libs/fftw3/lib/: libfftw3-3.lib
libs/glfw/include/glad/: glad.h
src/: main.cpp  test.cpp  util.hpp
src/audioAnalyzer/: audioAnalyzer.cpp  audioAnalyzer.hpp
src/audioLoader/: audioLoader.cpp  audioLoader.hpp
src/rendering/GL/: Mesh.hpp  OpenGLCallbacks.hpp  OpenGLDrawer.hpp  OpenGLInput.hpp  OpenGLLoader.hpp
src/rendering/GLSL/: GLSLShader.hpp  QueryShader.hpp  ShaderLoader.hpp
src/shaders/: background_fragment_shader.glsl  background_fragment_shader2.glsl  background_vertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
